[package]
name = "receiver"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num    = "0.2.1"
rppal  = "0.11.3"
timer  = "0.2.0"
chrono = "0.4.11"
ctrlc  = "3.1.4"
crossbeam-channel = "0.4.2"
exitfailure = "0.5.1"
